src/objects/ResourceForms__c.object
<CustomObject>
    <fields>
        <fullName>DetailText__c</fullName>
        <label>DetailText</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Form_Sequence__c</fullName>
        <label>Resource Form Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>ResourceForm</label>
    <nameField>
        <label>Header</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ResourceForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Resource_Forms</fullName>
        <columns>NAME</columns>
        <columns>DetailText__c</columns>
        <columns>IsActive__c</columns>
        <columns>Resource_Form_Sequence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Resource Forms</label>
    </listViews>
</CustomObject>